[package]
name = "btc-usd-ws"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = {version="0.10", features=["tls"]}
tungstenite = {version = "0.10", default-features = true}
url = "2.2"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.15"
iron="0.6.1"
csv = "1.1"
serde="1.0.117"
serde_json = "1.0.71"
itertools = "0.10.1"
http="0.2.5"
native-tls="0.2.8"
gnuplot="0.0.37"
plotlib="0.5.1"
plotters="^0.3.1"